--- a/src/main/resources/com/example/macroscanner/Sidebar.fxml
+++ b/src/main/resources/com/example/macroscanner/Sidebar.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="250.0"
+<VBox alignment="TOP_CENTER" prefWidth="240.0" maxHeight="Infinity"
       style="-fx-background-color: #0B3D5D;"
       stylesheets="@sidebar-style.css"
       xmlns="http://javafx.com/javafx/25"
@@ -19,7 +19,6 @@
         <Insets top="30.0" bottom="20.0" left="0.0" right="0.0" />
     </padding>
 
-    <!-- Logo -->
     <ImageView fitHeight="60.0" fitWidth="60.0" preserveRatio="true">
         <image>
             <Image url="@../../../../../../../../MDef.png" />
@@ -29,7 +28,6 @@
         </VBox.margin>
     </ImageView>
 
-    <!-- App Name -->
     <Label text="MacroScanner" textFill="WHITE">
         <font>
             <Font name="System Bold" size="18.0" />
@@ -39,17 +37,16 @@
         </VBox.margin>
     </Label>
 
-    <!-- Navigation Buttons -->
-    <VBox spacing="5.0" prefWidth="250.0">
+    <VBox spacing="5.0" prefWidth="240.0">
         <Button fx:id="btnHome"
                 text="Home"
                 onAction="#handleHome"
                 styleClass="sidebar-button"
                 maxWidth="Infinity">
             <graphic>
-                <ImageView fitHeight="24.0" fitWidth="24.0" preserveRatio="true">
+                <ImageView fitHeight="28.0" fitWidth="28.0" preserveRatio="true">
                     <image>
-                        <Image url="@icons/home-icon.png" />
+                        <Image url="@icons/home.png" />
                     </image>
                 </ImageView>
             </graphic>
@@ -61,9 +58,9 @@
                 styleClass="sidebar-button"
                 maxWidth="Infinity">
             <graphic>
-                <ImageView fitHeight="24.0" fitWidth="24.0" preserveRatio="true">
+                <ImageView fitHeight="28.0" fitWidth="28.0" preserveRatio="true">
                     <image>
-                        <Image url="@icons/history-icon.png" />
+                        <Image url="@icons/history.png" />
                     </image>
                 </ImageView>
             </graphic>
@@ -75,9 +72,9 @@
                 styleClass="sidebar-button"
                 maxWidth="Infinity">
             <graphic>
-                <ImageView fitHeight="24.0" fitWidth="24.0" preserveRatio="true">
+                <ImageView fitHeight="28.0" fitWidth="28.0" preserveRatio="true">
                     <image>
-                        <Image url="@icons/settings-icon.png" />
+                        <Image url="@icons/setting.png" />
                     </image>
                 </ImageView>
             </graphic>
