--- a/src/main/resources/com/example/macroscanner/HomePage.fxml
+++ b/src/main/resources/com/example/macroscanner/HomePage.fxml
@@ -7,6 +7,7 @@
 
 <HBox fx:id="rootPane" prefHeight="700.0" prefWidth="1200.0"
       style="-fx-background-color: #FFFFFF;"
+      stylesheets="@style.css"
       xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.macroscanner.HomePageController">
 
